# Rustcraft

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs  main.rs  primitives.rs
engine/: Cargo.toml
engine/src/: engine.rs  features.rs  lib.rs
engine/src/app/: app.rs  client.rs  mod.rs  server.rs
engine/src/config/: mod.rs  render_config.rs
engine/src/core/: math.rs  mod.rs  types.rs
engine/src/core/math/: mod.rs  vecf.rs  veci.rs
engine/src/model/: block.rs  chunk.rs  config.rs  map.rs  mod.rs  world.rs
engine/src/rendering/: context.rs  geometry.rs  mod.rs  renderer.rs  system.rs  target.rs  vertex.rs  window.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
