[package]
name = "rustcraft-client"
version = "0.1.0"
authors = ["Michał Majczak <michal.majczak92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.3.2"
nalgebra = "0.21"
static_assertions = "1.1.0"
winit = "0.22"
rustcraft-engine = {path = "../engine", features=["graphics", "audio", "networking"]}