[package]
name = "rustcraft-engine"
version = "0.1.0"
authors = ["Michał Majczak <michal.majczak92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
vulkano = "0.18.0"
vulkano-shaders = "0.18.0"
vulkano-win = "0.18.0"
winit = "0.22.1"