[package]
name = "rustcraft-engine"
version = "0.1.0"
authors = ["Michał Majczak <michal.majczak92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
graphics = ["vulkano", "vulkano-shaders", "vulkano-win", "winit"]
audio = []
networking = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }

vulkano = { version = "0.18", optional = true }
vulkano-shaders = { version = "0.18", optional = true }
vulkano-win = { version = "0.18", optional = true }
winit = { version = "0.22", optional = true }